rbx-dom/rbx_binary/src/tests/snapshots/rbx_binary__tests__util__funny-numbervalue__input.snap
---
source: rbx-dom/rbx_binary/src/tests/util.rs
expression: text_decoded
---
num_types: 1
num_instances: 1
chunks:
  - Meta:
      entries:
        - - ExplicitAutoJoints
          - "true"
  - Inst:
      type_id: 0
      type_name: NumberValue
      object_format: 0
      referents:
        - 0
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - Value
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
  - Prop:
      type_id: 0
      prop_name: Value
      prop_type: Float64
      values:
        - 1.23456
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
  - End
